--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
+    <link rel="stylesheet" type="text/css" href="./src/style.css" />
   </head>
   <body>
-    <div id="app"></div>
-    <script src="./src/main.ts"></script>
+    <div id="initPage"></div>
+    <div id="vcsPage" style="display: none"></div>
+    <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
