--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>vcs visual tutorial</title>
     <link rel="stylesheet" type="text/css" href="./src/style.css" />
   </head>
   <body>
